@@ -891,7 +891,7 @@ the current compilers used.
 
 The following additional items are normally installed by
 @file{Rtools.exe}.  If instead you choose to do a completely manual
-build (or a cross-build), you will also need
+build you will also need
 
 @itemize
 
@@ -1177,81 +1177,7 @@ for suggesting WiX and building a prototype installer.
 @node Cross-building on Linux,  , Building the MSI installer, Building from source
 @subsection Cross-building on Linux
 
-It is possible to cross-build @R{} or packages on (at least)
-@cputype{ix86} and @cputype{x86_64} Linux, and the @cputype{ix86}
-cross-compilers have also been used successfully on @cputype{x86_64}
-Linux.
-
-The preferred build environment is to use @command{gcc} 4.2.1: this can
-easily be built from the sources as a cross-compiler, but the
-MinGW-specific patches are not yet stable (and not needed to build @R{}).
-
-You will need suitable cross-compilers installed and in your path.  We
-do not at present distribute suitable cross-compilers.
-
-For Fedora 10 users, RPMs are expected to become available in the main
-repositories (see @uref{https://fedoraproject.org/wiki/MinGW}: also for
-RHEL/Centos 5 @cputype{i386} RPMs).  RPMs for Fedora 8 and 9 have been
-available at @uref{http://sourceforge.net/projects/@/mingw-cross/}.
-(The Fedora 8 @cputype{x86_64} RPMs have been tested.)  Recent Debian
-and Ubuntu versions have C/C++ (but it seems not Fortran)
-cross-compilers based on @command{gcc} 4.2.1.
-
-@c There is currently a complete set of tools based on @command{gcc} 3.4.5
-@c at @uref{http://www.stats.ox.ac.uk/pub/Rtools/i586-cross-tools.tar.bz2,
-@c @code{www.stats.ox.ac.uk/pub/Rtools/mingw-cross5.tar.bz2}} (Just unpack
-@c this into a directory somewhere and put its @file{bin} directory in your
-@c path.)  It is also straightforward to build a set of cross-compilers via
-@c the scripts available at
-@c @uref{http://sourceforge.net/forum/forum.php?forum_id=632611}.
-
-You will need Perl, @command{zip} and @command{unzip} installed and (to
-make the manuals) @command{makeinfo} version 4.7 or later (part of GNU
-@code{texinfo}) as well as @file{texinfo.tex}.
-
-You also need the R source (@file{R-@value{VERSIONno}.tar.gz}),
-the Tcl/Tk support files and @file{iconv.dll} (see above).
-
-Then: untar @file{R-@value{VERSIONno}.tar.gz} somewhere, unpack
-@file{R_Tcl.zip} at the top level and put @file{iconv.dll} in
-@file{src/gnuwin32/unicode}, then
-
-@example
-cd /somewhere/R-@value{VERSIONno}/src/gnuwin32
-@end example
-
-Edit @file{MkRules} to set @code{BUILD=CROSS} and the appropriate paths
-(including @code{HEADER} if needed).
-
-You also need a working copy of @emph{this version} of @R{} on Linux:
-uncomment and set @code{R_EXE} in @file{MkRules} to point to it.
-
-Then run @code{make} (and parallel make works reliably, unlike on
-Windows) and @code{make recommended}.
-
-Even so, packages which depend on others that need to run compiled
-code to load may not work (@pkg{methods} is a special exception).
-Turning lazy-loading off may be more successful (but the package may not
-work without lazy-loading).
-
-To distribute a cross-build (or just to transfer it to a Windows machine
-for testing) use
-
-@example
-make all recommended manuals
-cd installer
-make imagedir
-zip -r9X R-@value{VERSIONno}.zip R-@value{VERSIONno}  # or something similar
-@end example
-
-Note that @file{.chm} help files (the default for a vanilla binary
-installation) will not be made when cross-building.
-
-Also based on this facility is
-@uref{http://cran.r-project.org/doc/contrib/Makefile-rcb,
-@file{Makefile-rcb}} by J. Yan and A. J. Rossini.  For details, see
-the @file{Makefile-rcb} file itself, or
-@uref{http://cran.r-project.org/doc/contrib/cross-build.pdf}.
+Support for cross-building has been withdrawn as from @R{} 2.9.0.
 
 
 @node Installing R under Mac OS X, Running R, Installing R under Windows, Top
